<resources>
    <string name="app_name">Vimos</string>

    <string name="action_settings">Settings</string>
    <string name="email">Tutaj wpisz e-mail&#8230;</string>
    <string name="hint_nick">Tutaj podaj swoją nazwę użytkownika&#8230;</string>
    <string name="nick_step2">Po wpisaniu, kliknij przycisk poniżej</string>
    <string name="hint_name">Tutaj wpisz imię&#8230;</string>
    <string name="password">a tutaj hasło&#8230;</string>
    <string name="login">Zaloguj</string>

    <string name="register">Zarejestruj</string>
    <string name="set_nick">Dodaj użytkownika</string>
    <string name="set_name">Dodaj imię</string>
    <string name="nick_success">Twój nick został dodany.</string>
    <string name="nick_failure">Nick o takiej nazwie już istnieje. Wybierz inny.</string>
    <string name="name_success">Twoje imię zostało dodane.y</string>
    <string name="name_failure">Name already exists. Please, choose another one.</string>
    <string name="go_to_name">Go to name</string>


    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Napisz tutaj&#8230;</string>
    <string name="action_logout">Wyloguj się</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Jesteś pewny?</string>
    <string name="cancel">Anuluj</string>

    <!--SelectNavigationActivity-->

    <string name="red_string">Pociąg pasażerski</string>
    <string name="green_string">Pieszy</string>
    <string name="orange_string">Rowerzysta</string>

    <string name="internet_info">Brak połączenia z internetem. Włącz transfer danych.</string>
    <string name="tv_settings">Ustawienia</string>


    <!--BlueActivity-->

    <string name="btn_stop_detection">Stop detekcji</string>
    <string name="tv_welcome_blue">Karol, Detekcja włączona.</string>
    <string name="tv_detection_red">Pociąg na radarze.</string>
    <string name="tv_detection_green">Pieszy na radarze.</string>
    <string name="tv_details_to_nearest">Do najbliższego obiektu: </string>
    <string name="tv_details_distance">500m</string>
    <string name="tv_det_distance">Dystans</string>
    <string name="tv_details_time">45 s</string>
    <string name="tv_det_time">Czas</string>

    <string name="str_radius">Zasięg wykrywania:</string>
    <string name="str_obiects">Obiekty, które wykrywasz:</string>
    <string name="str_radar_info">Radar zniknie, kiedy wykryty zostanie dany obiekt.</string>
    <string name="str_radar_info2">Kiedy zniknie radar, pojawi się mapa z położeniem obiektów.</string>

    <string name="tv_radius_range">Zasięg wykrywania:</string>
    <string name="tv_objects">Obiekty:</string>
    <string name="tv_radar_info">Twój radar:</string>

    <string name="tv_person_goes_away">Pieszy się oddala&#8230;</string>
    <string name="tv_person_is_closing">Pieszy się zbliża&#8230;</string>
    <string name="tv_train_goes_away">Pociąg się oddala&#8230;</string>
    <string name="tv_train_is_closing">Pociąg się zbliża&#8230;</string>

    <string name="tv_person">pieszy</string>
    <string name="tv_people">pieszych</string>
    <string name="tv_isDetected">jest na radarze</string>
    <string name="tv_areDetected">są na radarze</string>


    <string-array name="lector_names">

        <item>Polski</item>
        <item>Angielski</item>

    </string-array>

    <string name="distance_increase">oddala się</string>
    <string name="distance_decrease">zbliża się</string>

    <!--Red Fragment-->

    <string name="tv_text_speed">Prędkość pociągu w km/h:</string>
    <string name="tv_r_speed">Prędkość pociągu:</string>
    <string name="tv_text_r_info1">Dzięki Tobie, inni pasażerowie są bezpieczniejsi, bowiem kierowcy w pojazdach na drodze wiedzą, nawet z 1 km, że do przejazdu zbliża się pociąg.</string>
    <string name="tv_text_r_info2">W każdej chwili możesz zakończyć działanie aplikacji, klikając przycisk w lewym dolnym rogu “Zakończ aplikację”. </string>
    <string name="tv_text_r_info3">Aplikacja działa nawet w trybie zminimalizowanym. Dzięki temu, możesz swobodnie korzystać ze swojego telefonu.</string>
    <string name="tv_text_r_info4">Kiedy zakończysz swoją podróż, pamiętaj proszę o wyłączeniu całkowitym aplikacji, aby nie zmylić kierowców np. jadącym pociągiem na przejściu dla pieszych. </string>

    <!--Green Fragment-->

    <string name="tv_text_g_info1">Włączyłeś funkcję Pieszy. Jednak pamiętaj, że nie każdy kierowca może mieć włączoną aplikację. Zachowaj ostrożność.</string>
    <string name="tv_text_g_info2">Jesteś teraz bezpieczniejszy. Kierowcy mogą Cię dostrzec nawet z 1000 metrów.</string>
    <string name="tv_text_g_info3">Aplikacja działa również w trybie zminimalizowanym.</string>
    <string name="tv_text_g_info4">Dzięki temu, możesz swobodnie korzystać ze swojego telefonu.</string>
    
    
    <!--Login Fragment-->
    
    <string name="login_email_error_empty_input">Proszę wpisz swój e-mail.</string>
    <string name="login_pass_error_empty_input">Proszę wpisz swoje hasło.</string>
    <string name="login_email_error_invalid_input">Zapomniałeś o znaku: @</string>

    <string name="login_register">Pierwszy raz?, Klikni tutaj, aby się zarejestrować</string>


    <!--Register Fragment-->

    <string name="tv_step1">krok 1/3</string>
    <string name="tv_step2">krok 2/3</string>
    <string name="tv_step3">krok 3/3</string>

    <string name="str_added_name">Wpisz swoje imię</string>
    <string name="str_added_nick">Wpisz swój nick</string>

    <string name="user_successfully_added">Konto zostało pomyślnie utworzone</string>
    <string name="user_unable_to_add">Wystąpił problem z rejestracją. Spróbuj jeszcze raz.</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Trwa proces rejestracji&#8230;</string>
    <string name="please_wait">Proszę czekać&#8230;</string>


    <!--Settings Fragment-->

    <string name="tv_meters">m</string>
    <string name="tv_radius_detection">Wielkość promienia, z którego będziesz wykrywać obiekty:</string>
    <string name="tv_type_of_object_to_detect">Zaznacz obiekty, które chcesz wykrywać podczas jazdy:</string>
    <string name="tv_set_lector_language">Wybierz język lektora:</string>
    <string name="tv_change_email">Zmień e-mail</string>
    <string name="tv_change_password">Zmień hasło</string>
    <string name="tv_logout">Wyloguj się</string>
    <string name="tv_remove_user">Usuń konto</string>

    <!--switch of objects on or off-->

    <string name="red_on">Pociąg pasażerski wł.</string>
    <string name="red_off">Pociąg pasażerski wył.</string>
    <string name="green_on">Pieszy wł.</string>
    <string name="green_off">Pieszy wył.</string>
    <string name="orange_on">Rowerzysta wł.</string>
    <string name="orange_off">Rowerzysta wył.</string>


    <!--passenger communication layout-->
    <string name="tv_set_hobby">dodaj hobby</string>
    <string name="tv_text_psng_comm">Komunikacja networkingowa</string>
    <string name="settings_red_title">Pasażer - networking</string>
    <string name="str_spec">Jaka jest Twoja specjalizacja?</string>
    <string name="str_hobby">A może hobby?</string>
    <string name="write_here">Wpisz tutaj&#8230;</string>
    <string name="str_settings_red_info1">Być może ktoś poszukuje osoby z Twoim hobby, bądź specjalizacją.</string>
    <string name="str_settings_red_info2">Pasażerowie w pociągu, będą mogli precyzyjniej się z Tobą komunikować.</string>
    <string name="click_below">Po wpisaniu, kliknij poniższy przycisk</string>
    <string name="add">Dodaj</string>
    <string name="str_added1">dodano do Twojego profilu</string>
    <string name="str_added2">Profil został zaktualizowany</string>
    <string name="str_profession">Wpisz swoje hobby bądź specjalizację</string>

    <drawable name="green_c">#66BB6A</drawable>

    <string name="tv_settings_user_title_account_info">Twoje konto w aplikacji Vimos</string>
    <string name="tv_settings_user_nick_info">nick:</string>
    <string name="tv_settings_user_name_info">imię:</string>
    <string name="tv_settings_user_profession_info">hobby/specjalizacja:</string>

    <!--Reset Password Layout-->

    <string name="tv_reset_pass_title">Resetowanie hasła</string>
    <string name="tv_reset_password_info1">Poniżej wpisz e-mail, który podałeś podczas rejestracji.</string>
    <string name="tv_reset_password_info2">Po wpisaniu, kliknij poniższy przycisk. Zostanie wysłane nowe hasło na Twoją pocztę e-mail.</string>
    <string name="btn_send_reset_password">Wyślij nowe hasło</string>
    <string name="txt_write_email">Wpisz swój e-mail</string>

    <string name="content_description">contentDescription</string>



</resources>
